docs: document custom JDK and jlink runtimes
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Copilot-Session: 8956d1e1-3754-42a2-bf8c-949929c19844